Limit width of about text to make more readable and fix some formatting issues on wider screen resolutions.

--- a/src/main/webapp/styles/style-document.css
+++ b/src/main/webapp/styles/style-document.css
@@ -213,6 +213,7 @@ body {
 	padding-left: 15px;
 	width: 80%;
 	margin-bottom: 15px;
+	max-width: 640px;
 }
 
 .about-content-page {
